--- a/Practica1/app/src/main/res/layout/activity_menu.xml
+++ b/Practica1/app/src/main/res/layout/activity_menu.xml
@@ -25,4 +25,13 @@
         android:layout_marginVertical="10dp"
         />
 
+    <Button
+        android:id="@+id/btnToDoApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ToDo App"
+        android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
+        />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
