--- a/Practica1/app/src/main/res/layout/item_task_category.xml
+++ b/Practica1/app/src/main/res/layout/item_task_category.xml
@@ -5,13 +5,16 @@
     android:layout_width="160dp"
     android:layout_height="90dp"
     app:cardBackgroundColor="@color/todo_background_card"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="16dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="8dp">
 
         <TextView
             android:id="@+id/tvCategoryName"
@@ -26,7 +29,8 @@
             android:id="@+id/vDivider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            tools:background="@color/white"/>
+            tools:background="@color/white"
+            android:layout_marginTop="16dp"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
