--- a/Practica1/app/src/main/res/layout/activity_menu.xml
+++ b/Practica1/app/src/main/res/layout/activity_menu.xml
@@ -34,4 +34,13 @@
         android:layout_marginVertical="10dp"
         />
 
+    <Button
+        android:id="@+id/btnSuperheroApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Superhero App"
+        android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
+        />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
