--- a/Practica1/app/src/main/res/layout/activity_superhero_list.xml
+++ b/Practica1/app/src/main/res/layout/activity_superhero_list.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".superheroApp.SuperheroListActivity">
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
+
     <SearchView
         android:id="@+id/svSearchHero"
         android:layout_width="0dp"
@@ -16,6 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSuperhero"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
