Finished = Superhero app, Started = Settings

--- a/Practica1/app/src/main/res/layout/activity_menu.xml
+++ b/Practica1/app/src/main/res/layout/activity_menu.xml
@@ -43,4 +43,12 @@
         android:layout_marginVertical="10dp"
         />
 
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
+        />
 </androidx.appcompat.widget.LinearLayoutCompat>
