--- a/Practica1/app/src/main/res/layout/activity_detail_superhero.xml
+++ b/Practica1/app/src/main/res/layout/activity_detail_superhero.xml
@@ -41,6 +41,22 @@
                 android:textStyle="bold"
                 tools:text="Name" />
 
+            <TextView
+                android:id="@+id/tvSuperheroRealName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textStyle="italic"
+                tools:text="Real Name" />
+
+            <TextView
+                android:id="@+id/tvPublisher"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textSize="12sp"
+                tools:text="Publisher" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -111,6 +127,8 @@
                     android:layout_marginHorizontal="4dp"
                     android:layout_weight="1"
                     android:text="@string/intelligence"
+                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textAlignment="center"/>
 
                 <TextView
@@ -136,6 +154,8 @@
                     android:layout_marginHorizontal="4dp"
                     android:layout_weight="1"
                     android:text="@string/durability"
+                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textAlignment="center"/>
 
                 <TextView
